--- a/Simulation/RBSCAN.ini
+++ b/Simulation/RBSCAN.ini
@@ -5,10 +5,526 @@ NetworkCnt=1
 AutoStart=0
 PreventExternalAutoStart=0
 NotCheckRxMessageForHIL=1
-N0=CH0_UnitBMS_SybR10
+N0=CH0_unitBMS_CAN_Database_R2
 
-[CH0_UnitBMS_SybR10]
-Name=UnitBMS_SybR10
+[CH0_unitBMS_CAN_Database_R2]
+Name=unitBMS_CAN_Database_R2
 Chn=0
 Active=0
-NodeCount=0
+NodeCount=2
+N0=CH0_unitBMS_CAN_Database_R2_DefaultSender
+N1=CH0_unitBMS_CAN_Database_R2_DefaultReceiver
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender]
+Name=DefaultSender
+Active=0
+MsgCount=18
+M0=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_1G
+M1=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_2G
+M2=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_3G
+M3=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_4G
+M4=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_5G
+M5=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_6G
+M6=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellTempSate
+M7=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellVSate
+M8=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_1G
+M9=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_2G
+M10=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_3G
+M11=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_4G
+M12=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_5G
+M13=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_6G
+M14=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_Infro
+M15=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_VoltProtect
+M16=CH0_unitBMS_CAN_Database_R2_DefaultSender_BMB_TXSTATE1
+M17=CH0_unitBMS_CAN_Database_R2_DefaultSender_HMI_STATE1
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_1G]
+Name=BMA1_0_CellT_1G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_2G]
+Name=BMA1_0_CellT_2G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_3G]
+Name=BMA1_0_CellT_3G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_4G]
+Name=BMA1_0_CellT_4G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_5G]
+Name=BMA1_0_CellT_5G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellT_6G]
+Name=BMA1_0_CellT_6G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellTempSate]
+Name=BMA1_0_CellTempSate
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellVSate]
+Name=BMA1_0_CellVSate
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_1G]
+Name=BMA1_0_CellV_1G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_2G]
+Name=BMA1_0_CellV_2G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_3G]
+Name=BMA1_0_CellV_3G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_4G]
+Name=BMA1_0_CellV_4G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_5G]
+Name=BMA1_0_CellV_5G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_CellV_6G]
+Name=BMA1_0_CellV_6G
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_Infro]
+Name=BMA1_0_Infro
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMA1_0_VoltProtect]
+Name=BMA1_0_VoltProtect
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_BMB_TXSTATE1]
+Name=BMB_TXSTATE1
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultSender_HMI_STATE1]
+Name=HMI_STATE1
+Active=0
+IsTx=1
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver]
+Name=DefaultReceiver
+Active=0
+MsgCount=18
+M0=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_1G
+M1=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_2G
+M2=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_3G
+M3=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_4G
+M4=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_5G
+M5=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_6G
+M6=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellTempSate
+M7=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellVSate
+M8=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_1G
+M9=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_2G
+M10=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_3G
+M11=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_4G
+M12=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_5G
+M13=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_6G
+M14=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_Infro
+M15=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_VoltProtect
+M16=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMB_TXSTATE1
+M17=CH0_unitBMS_CAN_Database_R2_DefaultReceiver_HMI_STATE1
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_1G]
+Name=BMA1_0_CellT_1G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_2G]
+Name=BMA1_0_CellT_2G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_3G]
+Name=BMA1_0_CellT_3G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_4G]
+Name=BMA1_0_CellT_4G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_5G]
+Name=BMA1_0_CellT_5G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellT_6G]
+Name=BMA1_0_CellT_6G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellTempSate]
+Name=BMA1_0_CellTempSate
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellVSate]
+Name=BMA1_0_CellVSate
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_1G]
+Name=BMA1_0_CellV_1G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_2G]
+Name=BMA1_0_CellV_2G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_3G]
+Name=BMA1_0_CellV_3G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_4G]
+Name=BMA1_0_CellV_4G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_5G]
+Name=BMA1_0_CellV_5G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_CellV_6G]
+Name=BMA1_0_CellV_6G
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_Infro]
+Name=BMA1_0_Infro
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMA1_0_VoltProtect]
+Name=BMA1_0_VoltProtect
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_BMB_TXSTATE1]
+Name=BMB_TXSTATE1
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
+
+[CH0_unitBMS_CAN_Database_R2_DefaultReceiver_HMI_STATE1]
+Name=HMI_STATE1
+Active=0
+IsTx=0
+MsgType=0
+Cycle=0
+StartDelay=0
+MsgDelay=0
+Init=0,0,0,0,0,0,0,0
+RCCount=0
+CRCCount=0
+ExprCount=0
